--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,28 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:scheme="productshopping"
-                    android:host="products"
-                    android:pathPattern="/.*" />
+                    android:scheme="app"
+                    android:host="productshopping"
+                    android:pathPrefix="/productsHome" />
             </intent-filter>
+            <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="app"
+                    android:host="productshopping"
+                    android:pathPrefix="/productDetail/" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="app"
+                    android:host="productshopping"
+                    android:pathPrefix="/shoppingCart" />
+        </intent-filter>
         </activity>
     </application>
 
