--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ junitVersion = "1.3.0"
 activityCompose = "1.11.0"
 navigationCompose = "2.9.5"
 room = "2.8.2"
-composeBom = "2024.04.01"
+composeBom = "2025.10.01"
 hilt = "2.57.2"
 hiltNav = "1.1.0"
 coroutines = "1.7.3"
@@ -49,6 +49,7 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 io-mockk-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+compose-material-icons = { group = "androidx.compose.material", name = "material-icons-core" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
